templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic-service
  labels:
    app: titanic
spec:
  selector:
    app: titanic
  ports:
    - name: titanic
      protocol: TCP
      port: 8000
