templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titanic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: titanic.alex.localhost
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: titanic-service
              port:
                number: 8000
